@@ -5,6 +5,10 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2010-01-05  Michael Jahn
+	* delete button added to the advanced filter dialog
+	* updated movie plugin Cinematografo (year added to result list entries)
+
 ---- 0.11 ----
 
 2010-01-09  Piotr Ożarowski
